# pybrtools

./: README.md  pyproject.toml
pybrtools/: cli.py  conference.py
pybrtools/models/: talk.py
pybrtools/video/: commands.py  ffmpeg.py  process.py  step_download.py
pybrtools/video/pipeline/: __init__.py  config.py  step_cut.py  step_download.py  step_join.py  step_process.py
